# lib/api-spec/openapi.yaml
@@ -648,6 +648,8 @@ components:
           type: integer
         customerName:
           type: string
+        customerPhone:
+          type: ["string", "null"]
         notes:
           type: ["string", "null"]
         status:
@@ -684,6 +686,8 @@ components:
         tableNumber:
           type: integer
         customerName:
+          type: string
+        customerPhone:
           type: string
         notes:
           type: string
